\name{NEWS}
\title{News for Package \pkg{SIMLR}}
\encoding{UTF-8}

\section{Changes in version 1.5.1 (2018-03-09)}{
    \itemize{
        \item Added CIMLR implementation. 
    }
}

\section{Changes in version 1.3.1 (2017-09-15)}{
    \itemize{
        \item Implemented estimation of number of clusters from data. 
    }
}

\section{Changes in version 1.2.1 (2017-05-29)}{
    \itemize{
        \item Fix Windows memory usage. 
    }
}

\section{Changes in version 1.1.5 (2017-04-10)}{
    \itemize{
        \item Minor bug fixes. 
    }
}

\section{Changes in version 1.1.3 (2017-03-27)}{
    \itemize{
        \item Large scale implementation. 
        \item Various bug fixes. 
    }
}