@@ -29,14 +29,3 @@ NULL
 #'  	results = result by SIMLR for the inputs defined as described, 
 #'  	nmi = normalized mutual information as a measure of the inferred clusters compared to the true labels 
 NULL
-
-#' @name GliomasReduced 
-#' @title test dataset for CIMLR 
-#' @description example dataset to test CIMLR. This is a reduced version of the dataset from the work by The Cancer Genome Atlas Research Network. 
-#' @docType data 
-#' @usage data(GliomasReduced) 
-#' @format multi-omic data of cancer patients 
-#' @source Cancer Genome Atlas Research Network. "Comprehensive, integrative genomic analysis of diffuse lower-grade gliomas." New England Journal of Medicine 372.26 (2015): 2481-2498. 
-#' @return list of 1 element: 
-#'		in_X = input dataset as a list of 4 (reduced) multi-omic data each of which is an (m x n) measurements of cancer patients 
-NULL
