@@ -1,6 +1,6 @@
 Sys.setenv("R_TESTS" = "")
 
-library(testthat)
-library(SIMLR)
+library("testthat")
+library("SIMLR")
 
 test_check("SIMLR")
